--- a/python_machine_learning/Makefile
+++ b/python_machine_learning/Makefile
@@ -1,5 +1,4 @@
 lint:
 	flake8 .
 setup:
-	python -m virtualenv venv
-	(source venv/bin/activate ; pip install -r requirements.txt)
+	pip install -e .
